# hi3861-bootstrap

./: CMakeLists.txt  README.md  link.ld
src/: main.c  riscv_init.S
tools/: packet_bin.py  sign_tool.py
